--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,10 +7,14 @@ pipeline{
       }
     }
     stage('helloJenkinsfile'){
-      echo Hello from Jenkinsfile
+      steps{
+        echo Hello from Jenkinsfile
+      }
     }
     stage('helloShell'){
-      sh 'echo "Hello from shell" '
+      steps{
+        sh 'echo "Hello from shell" '
+      } 
     }
   }
 }
